@@ -103,7 +103,7 @@ pkglib_LTLIBRARIES = libdbmail.la
 
 
 if SHARED
-AM_LDFLAGS = -export-dynamic -lcrypt
+AM_LDFLAGS = -export-dynamic @CRYPTLIB@
 libdbmail_la_SOURCES = $(COMMON) $(SERVER) $(DELIVER) $(MODULES)
 else
 libdbmail_la_SOURCES = $(COMMON) $(SERVER) $(DELIVER)
