@@ -70,6 +70,9 @@ AM_CONDITIONAL(LDAP, [test -n "$LDAPLIB"])
 AC_C_BIGENDIAN
 AC_CHECK_HEADERS(endian.h)
 AC_CHECK_HEADERS(crypt.h)
+AC_CHECK_LIB(crypt, crypt, [ CRYPTLIB="-lcrypt" ])
+
+AC_SUBST(CRYPTLIB)
 
 AC_SUBST(MYSQLLIB)
 AC_SUBST(MYSQLALIB)
